force-app/main/default/objects/PDE_c_Home__dlm/fields/HCEOptimal_c__c.field-meta.xml
<CustomField>
    <fullName>HCEOptimal_c__c</fullName>
    <label>HCE Optimal</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>HCE Optimal</labelOverride>
        <masterLabel>HCE Optimal</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>