force-app/main/default/objects/PDE_c_Home__dlm/fields/HCHOptimal_c__c.field-meta.xml
<CustomField>
    <fullName>HCHOptimal_c__c</fullName>
    <label>HCH Optimal</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>HCH Optimal</labelOverride>
        <masterLabel>HCH Optimal</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>