force-app/main/default/objects/PDE_c_Home__dlm/fields/HPEActuel_c__c.field-meta.xml
<CustomField>
    <fullName>HPEActuel_c__c</fullName>
    <label>HPE Actuel</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>HPE Actuel</labelOverride>
        <masterLabel>HPE Actuel</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>