force-app/main/default/objects/PDE_c_Home__dlm/fields/HPEOptimal_c__c.field-meta.xml
<CustomField>
    <fullName>HPEOptimal_c__c</fullName>
    <label>HPE Optimal</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>HPE Optimal</labelOverride>
        <masterLabel>HPE Optimal</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>