force-app/main/default/objects/PDE_c_Home__dlm/fields/HPHActuel_c__c.field-meta.xml
<CustomField>
    <fullName>HPHActuel_c__c</fullName>
    <label>HPH Actuel</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>HPH Actuel</labelOverride>
        <masterLabel>HPH Actuel</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>