force-app/main/default/objects/PDE_c_Home__dlm/fields/HPHOptimal_c__c.field-meta.xml
<CustomField>
    <fullName>HPHOptimal_c__c</fullName>
    <label>HPH Optimal</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>HPH Optimal</labelOverride>
        <masterLabel>HPH Optimal</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>