force-app/main/default/objects/PDE_c_Home__dlm/fields/IdAnalyse_c__c.field-meta.xml
<CustomField>
    <fullName>IdAnalyse_c__c</fullName>
    <label>Id Analyse</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Id Analyse</labelOverride>
        <masterLabel>Id Analyse</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>