force-app/main/default/objects/PDE_c_Home__dlm/fields/IdBuilding_c__c.field-meta.xml
<CustomField>
    <fullName>IdBuilding_c__c</fullName>
    <label>Id Building</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Id Building</labelOverride>
        <masterLabel>Id Building</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>