force-app/main/default/objects/PDE_c_Home__dlm/fields/Identifiant_PITD_c__c.field-meta.xml
<CustomField>
    <fullName>Identifiant_PITD_c__c</fullName>
    <label>Identifiant PITD</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Identifiant PITD</labelOverride>
        <masterLabel>Identifiant PITD</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>