force-app/main/default/objects/PDE_c_Home__dlm/fields/IdSource_c__c.field-meta.xml
<CustomField>
    <fullName>IdSource_c__c</fullName>
    <label>Id Source</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Id Source</labelOverride>
        <masterLabel>Id Source</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>