force-app/main/default/objects/PDE_c_Home__dlm/fields/InterventionPEPS_c__c.field-meta.xml
<CustomField>
    <fullName>InterventionPEPS_c__c</fullName>
    <label>Intervention PEP&apos;S (€HT/an)</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Intervention PEP&apos;S (€HT/an)</labelOverride>
        <masterLabel>Intervention PEP&apos;S (€HT/an)</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>