force-app/main/default/objects/PDE_c_Home__dlm/fields/Message_retour_optimisation_TURPE_c__c.field-meta.xml
<CustomField>
    <fullName>Message_retour_optimisation_TURPE_c__c</fullName>
    <label>Message retour optimisation TURPE</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Message retour optimisation TURPE</labelOverride>
        <masterLabel>Message retour optimisation TURPE</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>