force-app/main/default/objects/PDE_c_Home__dlm/fields/Nom_du_compte_c__c.field-meta.xml
<CustomField>
    <fullName>Nom_du_compte_c__c</fullName>
    <label>Nom du compte</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Nom du compte</labelOverride>
        <masterLabel>Nom du compte</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>