force-app/main/default/objects/PDE_c_Home__dlm/fields/NumeroEtVoie_c__c.field-meta.xml
<CustomField>
    <fullName>NumeroEtVoie_c__c</fullName>
    <label>Voie</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Voie</labelOverride>
        <masterLabel>Voie</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>