force-app/main/default/objects/PDE_c_Home__dlm/fields/NumeroVoie_c__c.field-meta.xml
<CustomField>
    <fullName>NumeroVoie_c__c</fullName>
    <label>Numéro voie</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Numéro voie</labelOverride>
        <masterLabel>Numéro voie</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>