force-app/main/default/objects/PDE_c_Home__dlm/fields/PCE_Refonte_c__c.field-meta.xml
<CustomField>
    <fullName>PCE_Refonte_c__c</fullName>
    <label>PCE</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>PCE</labelOverride>
        <masterLabel>PCE</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>