force-app/main/default/objects/PDE_c_Home__dlm/fields/PDE_Optimise_Pictogramme_c__c.field-meta.xml
<CustomField>
    <fullName>PDE_Optimise_Pictogramme_c__c</fullName>
    <label>PDE Optimisé ?</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>PDE Optimisé ?</labelOverride>
        <masterLabel>PDE Optimisé ?</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>