force-app/main/default/objects/PDE_c_Home__dlm/fields/POINTEActuel_c__c.field-meta.xml
<CustomField>
    <fullName>POINTEActuel_c__c</fullName>
    <label>POINTE Actuel</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>POINTE Actuel</labelOverride>
        <masterLabel>POINTE Actuel</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>