force-app/main/default/objects/PDE_c_Home__dlm/fields/POINTEOptimal_c__c.field-meta.xml
<CustomField>
    <fullName>POINTEOptimal_c__c</fullName>
    <label>POINTE Optimal</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>POINTE Optimal</labelOverride>
        <masterLabel>POINTE Optimal</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>