force-app/main/default/objects/PDE_c_Home__dlm/fields/Premiere_mise_en_service_c__c.field-meta.xml
<CustomField>
    <fullName>Premiere_mise_en_service_c__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Première mise en service</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Première mise en service</labelOverride>
        <masterLabel>Première mise en service</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>