force-app/main/default/objects/PDE_c_Home__dlm/fields/Profil_c__c.field-meta.xml
<CustomField>
    <fullName>Profil_c__c</fullName>
    <label>Profil</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Profil</labelOverride>
        <masterLabel>Profil</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>