force-app/main/default/objects/PDE_c_Home__dlm/fields/Profil_Futur_c__c.field-meta.xml
<CustomField>
    <fullName>Profil_Futur_c__c</fullName>
    <label>Profil Futur</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Profil Futur</labelOverride>
        <masterLabel>Profil Futur</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>