force-app/main/default/objects/PDE_c_Home__dlm/fields/PSMaxActive_c__c.field-meta.xml
<CustomField>
    <fullName>PSMaxActive_c__c</fullName>
    <label>PS Max Active</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>PS Max Active</labelOverride>
        <masterLabel>PS Max Active</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>