force-app/main/default/objects/PDE_c_Home__dlm/fields/PSMaxCapacitive_c__c.field-meta.xml
<CustomField>
    <fullName>PSMaxCapacitive_c__c</fullName>
    <label>PS Max Capacitive</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>PS Max Capacitive</labelOverride>
        <masterLabel>PS Max Capacitive</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>