force-app/main/default/objects/PDE_c_Home__dlm/fields/PSMaxInductive_c__c.field-meta.xml
<CustomField>
    <fullName>PSMaxInductive_c__c</fullName>
    <label>PS Max Inductive</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>PS Max Inductive</labelOverride>
        <masterLabel>PS Max Inductive</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>