force-app/main/default/objects/PDE_c_Home__dlm/fields/Puissance_souscrite_c__c.field-meta.xml
<CustomField>
    <fullName>Puissance_souscrite_c__c</fullName>
    <label>Puissance souscrite</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Puissance souscrite</labelOverride>
        <masterLabel>Puissance souscrite</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>