force-app/main/default/objects/PDE_c_Home__dlm/fields/ReferencePointEnergie_Refonte_c__c.field-meta.xml
<CustomField>
    <fullName>ReferencePointEnergie_Refonte_c__c</fullName>
    <label>Référence point d&apos;énergie</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Référence point d&apos;énergie</labelOverride>
        <masterLabel>Référence point d&apos;énergie</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>