force-app/main/default/objects/PDE_c_Home__dlm/fields/Renouvellement_OK_Ann_e_en_cours_c__c.field-meta.xml
<CustomField>
    <fullName>Renouvellement_OK_Ann_e_en_cours_c__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Renouvellement OK Année en cours</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Renouvellement OK Année en cours</labelOverride>
        <masterLabel>Renouvellement OK Année en cours</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>