force-app/main/default/objects/PDE_c_Home__dlm/fields/ResultatCalculPsMax_c__c.field-meta.xml
<CustomField>
    <fullName>ResultatCalculPsMax_c__c</fullName>
    <label>Résultat calcul des PS Max</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Résultat calcul des PS Max</labelOverride>
        <masterLabel>Résultat calcul des PS Max</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>