force-app/main/default/objects/PDE_c_Home__dlm/fields/Segment_c__c.field-meta.xml
<CustomField>
    <fullName>Segment_c__c</fullName>
    <label>Segment</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Segment</labelOverride>
        <masterLabel>Segment</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>