force-app/main/default/objects/PDE_c_Home__dlm/fields/SignataireACD_c__c.field-meta.xml
<CustomField>
    <fullName>SignataireACD_c__c</fullName>
    <label>Signataire ACD</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Signataire ACD</labelOverride>
        <masterLabel>Signataire ACD</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>