force-app/main/default/objects/PDE_c_Home__dlm/fields/Siret_payeur_c__c.field-meta.xml
<CustomField>
    <fullName>Siret_payeur_c__c</fullName>
    <label>Siret payeur</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Siret payeur</labelOverride>
        <masterLabel>Siret payeur</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>