force-app/main/default/objects/PDE_c_Home__dlm/fields/SiteConsommation_c__c.field-meta.xml
<CustomField>
    <fullName>SiteConsommation_c__c</fullName>
    <label>Site de Consommation</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Site de Consommation</labelOverride>
        <masterLabel>Site de Consommation</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>