force-app/main/default/objects/PDE_c_Home__dlm/fields/Tarif_c__c.field-meta.xml
<CustomField>
    <fullName>Tarif_c__c</fullName>
    <label>Tarif</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Tarif</labelOverride>
        <masterLabel>Tarif</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>