force-app/main/default/objects/PDE_c_Home__dlm/fields/Taux_puissance_souscrite_utilisee_c__c.field-meta.xml
<CustomField>
    <fullName>Taux_puissance_souscrite_utilisee_c__c</fullName>
    <label>Taux puissance souscrite utilisée</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Taux puissance souscrite utilisée</labelOverride>
        <masterLabel>Taux puissance souscrite utilisée</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>