force-app/main/default/objects/PDE_c_Home__dlm/fields/TaxeCTAActuel_c__c.field-meta.xml
<CustomField>
    <fullName>TaxeCTAActuel_c__c</fullName>
    <label>Taxe CTA Actuel (€HT/an)</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Taxe CTA Actuel (€HT/an)</labelOverride>
        <masterLabel>Taxe CTA Actuel (€HT/an)</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>