force-app/main/default/objects/PDE_c_Home__dlm/fields/TECH_C5_4Postes_c__c.field-meta.xml
<CustomField>
    <fullName>TECH_C5_4Postes_c__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TECH_C5_4Postes</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>TECH_C5_4Postes</labelOverride>
        <masterLabel>TECH_C5_4Postes</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>