force-app/main/default/objects/PDE_c_Home__dlm/fields/TECH_CAR_c__c.field-meta.xml
<CustomField>
    <fullName>TECH_CAR_c__c</fullName>
    <label>CAR</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>CAR</labelOverride>
        <masterLabel>CAR</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>