force-app/main/default/objects/PDE_c_Home__dlm/fields/TECH_MU_CU_c__c.field-meta.xml
<CustomField>
    <fullName>TECH_MU_CU_c__c</fullName>
    <label>TECH_MU_CU</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>TECH_MU_CU</labelOverride>
        <masterLabel>TECH_MU_CU</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>