force-app/main/default/objects/PDE_c_Home__dlm/fields/TECH_num_compteur_c__c.field-meta.xml
<CustomField>
    <fullName>TECH_num_compteur_c__c</fullName>
    <label>Numéro de compteur</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Numéro de compteur</labelOverride>
        <masterLabel>Numéro de compteur</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>