force-app/main/default/objects/PDE_c_Home__dlm/fields/TECH_OptimisationFieldsMissing_c__c.field-meta.xml
<CustomField>
    <fullName>TECH_OptimisationFieldsMissing_c__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TECH Champ Optimisation manquant ?</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>TECH Champ Optimisation manquant ?</labelOverride>
        <masterLabel>TECH Champ Optimisation manquant ?</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>