force-app/main/default/objects/PDE_c_Home__dlm/fields/TECH_PDE_Conforme_c__c.field-meta.xml
<CustomField>
    <fullName>TECH_PDE_Conforme_c__c</fullName>
    <label>PDE Conforme</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>PDE Conforme</labelOverride>
        <masterLabel>PDE Conforme</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>