force-app/main/default/objects/PDE_c_Home__dlm/fields/TECH_RTName_c__c.field-meta.xml
<CustomField>
    <fullName>TECH_RTName_c__c</fullName>
    <label>TECH_RTName</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>TECH_RTName</labelOverride>
        <masterLabel>TECH_RTName</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>